src/components/attendee/NavOverlay/NavOverlay.module.scss
@use "scss/attendee/mixins.scss"as *;
@use "scss/attendee/variables.scss"as *;

.navOverlay {
  @include sparkle-color-glass;
  position: fixed;
  z-index: $z-index-attendee-overlay;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

.navOverlayClose {
  display: flex;
  align-items: center;
  padding: 0 $whitespace;
  height: $element-height-normal;
  border-radius: $border-radius-normal;
  position: fixed;
  top: $whitespace;
  right: $whitespace;
  cursor: pointer;
  z-index: $z-index-attendee-overlay-close-btn;
}

.navOverlayContainer {
  display: flex;
  width: 100%;
  height: 100%;
  font-size: $font-size-large;

  @media (max-width: 768px) {
    flex-wrap: wrap;
    overflow-y: auto;
  }
}

.navOverlayNavigation {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  padding: $whitespace * 4 $whitespace * 3;
  width: 100%;

  @media (min-width: 768px) {
    width: $sidebar-width;
  }

  @media (max-width: 768px) {
    margin: auto;
  }
}

.navOverlayContent {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: $font-size-large;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  mask: linear-gradient(
    to bottom,
    transparent 0,
    rgba(0, 0, 0, 0.2) 40px,
    rgba(0, 0, 0, 0.4) 60px,
    #000 80px
  );
}

.closeIcon {
  position: relative;
  overflow: hidden;
  display: inline-block;
  width: 1.3rem;
  height: 1.3rem;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  margin-left: $whitespace / 2;
  background-image: url(~assets/icons/icon-close-portal.svg);
  filter: invert(1);
}

.navigationButton {
  cursor: pointer;
  display: flex;
  align-items: center;
  padding: 0 $whitespace;
  height: $element-height-normal;
  border-radius: $border-radius-normal;
  padding: 0;
  font-size: $font-size-large;
}

